--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
@@ -1,6 +1,7 @@
 <head th:fragment="head">
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
+<link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
 <title>Shopme Admin</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
