--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body>
+<nav th:replace="~{fragment/navbar :: navbar}"></nav>
 <h1>Hi This is admin dashboard</h1>
 <p class="lead" id="para">This is normal text</p>
 <button onclick="change()" class="btn btn-primary">Change</button>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
