--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
@@ -7,7 +7,15 @@
 
 	<div class="container">
 		<h2 class="my-3 text-primary">Create New User</h2>
+		
+		<div class="alert" th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'" th:if="${savingUser}">
+			<span th:text="${message}"></span>
+		</div>
+		
 		<form class="card p-2" th:action="@{'/users/save'}" method="post" th:object="${user}">
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="hidden" name="id" th:value="*{id}"/>
+			<input type="hidden" name="updating" th:value="${updatingUser}"/>
 			<div>
 				<label for="firstname">First Name</label>
 				<input type="text" class="form-control" name="firstname" id="firstname" th:field="*{firstname}" min="2" max="25" required/>
@@ -25,7 +33,7 @@
 			<br/>
 			<div>
 				<label for="password">Password</label>
-				<input type="password" class="form-control" name="password" id="password" th:field="*{password}" min="6" max="25" required/>
+				<input type="password" class="form-control" name="password" id="password" th:field="*{password}" min="6" max="25" required th:disabled="${updatingUser}"/>
 			</div>
 			<br/>
 			<div>
@@ -36,7 +44,7 @@
 			</div>
 			<br/>
 			<div>
-				<input type="checkbox" name="enabled" id="enabled" th:field="*{enabled}" required/>
+				<input type="checkbox" name="enabled" id="enabled" th:field="*{enabled}"/>
 				<label for="enabled">Enabled</label>
 			</div>
 			<br/>
