--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
@@ -5,7 +5,7 @@
 <title>Shopme Admin</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
-<script defer th:src="@{/js/bootstrap.bundle.min.js}"></script>
-<script defer th:src="@{/js/jquery-3.7.1.min.js}"></script>
-<script defer th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+<script th:src="@{/js/common.js}"></script>
 </head>
