--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
@@ -5,78 +5,77 @@
 <body>
 	<nav th:replace="~{fragment/navbar :: navbar}"></nav>
 
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row my-2">
-
-			<form class="card p-2 col-md-10 mx-auto" th:action="@{'/users/save'}"
-				method="post" th:object="${user}" enctype="multipart/form-data">
-				<h2
-					class="my-3 text-primary d-flex justify-content-center align-items-center">
-					<img th:src="@{/image/user/default.svg}" alt="pic" width="60"
-						height="60" class="mx-2" /> Create New User
-				</h2>
-				<div class="alert"
-					th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
-					th:if="${savingUser}">
-					<span th:text="${message}"></span>
-				</div>
-				<input type="hidden" th:name="${_csrf.parameterName}"
-					th:value="${_csrf.token}" /> <input type="hidden" name="id"
-					th:value="*{id}" /> <input type="hidden" name="updating"
-					th:value="${updatingUser}" />
-				<div>
-					<label for="firstname">First Name</label> <input type="text"
-						class="form-control" name="firstname" id="firstname"
-						th:field="*{firstname}" min="2" max="25" required />
-				</div>
-				<br />
-				<div>
-					<label for="lastname">Last Name</label> <input type="text"
-						class="form-control" name="lastname" id="lastname"
-						th:field="*{lastname}" min="2" max="25" required />
-				</div>
-				<br />
-				<div>
-					<label for="email">Email</label> <input type="email"
-						class="form-control" name="email" id="email" th:field="*{email}"
-						min="10" max="100" required />
-				</div>
-				<br />
-				<div>
-					<label for="password">Password</label> <input type="password"
-						class="form-control" name="password" id="password"
-						th:field="*{password}" min="6" max="25" required
-						th:disabled="${updatingUser}" />
-				</div>
-				<br />
-				<div>
-					<label for="roles">Roles</label><br /> <select name="roles"
-						id="roles" th:field="*{roles}" multiple required
-						class="form-control">
-						<option th:each="role:${roles}" th:text="${role.name}"
-							th:value="${role.id}"></option>
-					</select>
-				</div>
-				<br />
-				<div>
-					<input type="checkbox" name="enabled" id="enabled"
-						th:field="*{enabled}" /> <label for="enabled">Enabled</label>
-				</div>
-				<br />
-				<div class="d-flex">
-					<img alt="user"
-						th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/image/user/default.svg' : '/image/user/'+user.photo}}"
-						width="60" height="60" class="mx-2" /> 
-						<input type="file"
-						class="form-control" name="file"
-						accept=".svg, .jpg, .jpeg, .png" />
-				</div>
-				<br />
-				<div>
-					<button type="submit" class="btn btn-primary">Create</button>
-					<button type="reset" class="btn btn-danger">Clean</button>
-				</div>
-			</form>
+			<div class="col-sm-12 col-md-8 mx-auto">
+				<form class="card p-2 mx-auto" th:action="@{'/users/save'}"
+					method="post" th:object="${user}" enctype="multipart/form-data">
+					<h2
+						class="my-3 text-primary d-flex justify-content-center align-items-center">
+						<img th:src="@{/image/user/default.svg}" alt="pic" width="60"
+							height="60" class="mx-2" /> Create New User
+					</h2>
+					<div class="alert"
+						th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
+						th:if="${savingUser}">
+						<span th:text="${message}"></span>
+					</div>
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" /> <input type="hidden" name="id"
+						th:value="*{id}" /> <input type="hidden" name="updating"
+						th:value="${updatingUser}" />
+					<div>
+						<label for="firstname">First Name</label> <input type="text"
+							class="form-control" name="firstname" id="firstname"
+							th:field="*{firstname}" min="2" max="25" required />
+					</div>
+					<br />
+					<div>
+						<label for="lastname">Last Name</label> <input type="text"
+							class="form-control" name="lastname" id="lastname"
+							th:field="*{lastname}" min="2" max="25" required />
+					</div>
+					<br />
+					<div>
+						<label for="email">Email</label> <input type="email"
+							class="form-control" name="email" id="email" th:field="*{email}"
+							min="10" max="100" required />
+					</div>
+					<br />
+					<div>
+						<label for="password">Password</label> <input type="password"
+							class="form-control" name="password" id="password"
+							th:field="*{password}" min="6" max="25" required
+							th:disabled="${updatingUser}" />
+					</div>
+					<br />
+					<div>
+						<label for="roles">Roles</label><br /> <select name="roles"
+							id="roles" th:field="*{roles}" multiple required
+							class="form-control">
+							<option th:each="role:${roles}" th:text="${role.name}"
+								th:value="${role.id}"></option>
+						</select>
+					</div>
+					<br />
+					<div>
+						<input type="checkbox" name="enabled" id="enabled"
+							th:field="*{enabled}" /> <label for="enabled">Enabled</label>
+					</div>
+					<br />
+					<div class="d-flex">
+						<img alt="user"
+							th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/image/user/default.svg' : '/image/user/'+user.photo}}"
+							width="60" height="60" class="mx-2" /> <input type="file"
+							class="form-control" name="file" accept=".svg, .jpg, .jpeg, .png" />
+					</div>
+					<br />
+					<div>
+						<button type="submit" class="btn btn-primary">Create</button>
+						<button type="reset" class="btn btn-danger">Clean</button>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 
