--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -3,72 +3,109 @@
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body>
-	<link rel="stylesheet" th:href="@{/css/dataTable.bootstrap5.css}"/>
-	
 	<nav th:replace="~{fragment/navbar :: navbar}"></nav>
-	<div class="container">
-		<h2 class="my-3 text-primary">Manager Users</h2>
-		
-		<div class="alert" th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'" th:if="${savingUser}">
-			<span th:text="${message}"></span>
-		</div>
-		<div class="alert" th:classappend="${deletedSuccessfully} ? 'alert-success' : 'alert-danger'" th:if="${deletingUser}">
-			<span th:text="${message}"></span>
-		</div>
-		<div class="alert alert-danger" th:if="${updatingUser}">
-			<span th:text="${message}"></span>
-		</div>
-		
-		<!-- Table Start -->
+	<div class="container-fluid my-2">
+		<div class="row">
+			<div class="col-md-10 mx-auto">
+				<h2 class="my-3 text-primary">Manager Users</h2>
 
-		<table class="table" id="richTable">
-			<thead>
-				<tr class="text-center">
-					<th scope="col">Photo</th>
-					<th scope="col">First Name</th>
-					<th scope="col">Last Name</th>
-					<th scope="col">Email</th>
-					<th scope="col">Roles</th>
-					<th scope="col">Enabled</th>
-					<th scope="col"><a th:href="@{'/users/create'}" class="btn btn-dark"> <img
-							alt="plus" th:src="@{'/image/plus.svg'}" class="icon" />
-					</a></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="user:${users}" class="text-center">
-					<td>
-						<img 
-						alt="user" 
-						th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/image/user/default.svg' : '/image/user/'+user.photo}}"
-						width="50"
-						height="50"
-						/>
-					</td>
-					<td th:text="${user.firstname}"></td>
-					<td th:text="${user.lastname}"></td>
-					<td th:text="${user.email}"></td>
-					<td th:text="${user.roles}"></td>
-					<td>
-						<img class="icon" th:src="@{${user.enabled} ? '/image/green.svg' : '/image/red.svg'}" alt="status"/>
-					</td>
-					<td>
-						<a th:href="@{/users/update/{id}(id=${user.id})}" class="btn btn-warning">Edit</a>
-						<a th:href="@{/users/changePassword/{id}(id=${user.id})}" class="btn btn-info">Change Password</a>
-						<a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<!-- Table end  -->
+				<div class="alert"
+					th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
+					th:if="${savingUser}">
+					<span th:text="${message}"></span>
+				</div>
+				<div class="alert"
+					th:classappend="${deletedSuccessfully} ? 'alert-success' : 'alert-danger'"
+					th:if="${deletingUser}">
+					<span th:text="${message}"></span>
+				</div>
+				<div class="alert alert-danger" th:if="${updatingUser}">
+					<span th:text="${message}"></span>
+				</div>
+
+				<!-- Table Start -->
+				<div class="my-3 d-flex justify-content-end">
+					<form class="w-25 d-flex" th:action="@{'/users/search'}">
+						<input type="text" class="form-control" placeholder="Search User" name="text"/>
+						<button class="btn btn-primary ms-2">Search</button>
+					</form>
+					<a class="btn btn-danger ms-2" th:href="@{'/users'}">Clear Search</a>
+				</div>
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">Photo</th>
+							<th scope="col">First Name</th>
+							<th scope="col">Last Name</th>
+							<th scope="col">Email</th>
+							<th scope="col">Roles</th>
+							<th scope="col">Enabled</th>
+							<th scope="col"><a class="btn btn-light"
+								th:href="@{'/users/export-csv'}"> <img alt="csv"
+									th:src="@{'/image/csv.svg'}" class="icon" />
+							</a> <a th:href="@{'/users/create'}" class="btn btn-dark"> <img
+									alt="plus" th:src="@{'/image/plus.svg'}" class="icon" />
+							</a></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="user:${userResult.data}">
+							<td><img alt="user"
+								th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/image/user/default.svg' : '/image/user/'+user.photo}}"
+								width="50" height="50" /></td>
+							<td th:text="${user.firstname}"></td>
+							<td th:text="${user.lastname}"></td>
+							<td th:text="${user.email}"></td>
+							<td th:text="${user.roles}"></td>
+							<td><img class="icon"
+								th:src="@{${user.enabled} ? '/image/green.svg' : '/image/red.svg'}"
+								alt="status" /></td>
+							<td>
+								<!-- Edit Button --> <a
+								th:href="@{/users/update/{id}(id=${user.id})}"
+								class="btn btn-warning"> <img class="icon" alt="edit"
+									th:src="@{'/image/edit.svg'}" /> <!-- Change Password -->
+							</a> <a th:href="@{/users/changePassword/{id}(id=${user.id})}"
+								class="btn btn-info"> <img class="icon" alt="password"
+									th:src="@{'/image/password.svg'}" /> <!-- Delete -->
+							</a> <a th:href="@{/users/delete/{id}(id=${user.id})}"
+								class="btn btn-danger"> <img class="icon" alt="delete"
+									th:src="@{'/image/delete.svg'}" />
+							</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="d-flex justify-content-between my-3">
+					<p>
+						Showing user <span th:text="${userResult.start}"></span> to <span th:text="${userResult.end}"></span> of <span th:text="${userResult.totalRecords}"></span>
+					</p>
+					<nav aria-label="Page navigation example">
+						<ul class="pagination">
+
+							<li class="page-item"
+								th:classAppend="${userResult.isFirst} ? 'disabled' : ''"><a
+								class="page-link"
+								th:href="@{/users?page={page}(page=${userResult.currentPage-1})}">Previous</a>
+							</li>
+
+							<li class="page-item"
+								th:each="i:${#numbers.sequence(1,userResult.totalPages)}"><a
+								class="page-link" th:href="@{/users?page={page}(page=${i-1})}"
+								th:text="${i}"></a></li>
+
+							<li class="page-item"
+								th:classAppend="${userResult.isLast} ? 'disabled' : ''"><a
+								class="page-link"
+								th:href="@{/users?page={page}(page=${userResult.currentPage+1})}">Next</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<!-- Table end  -->
+			</div>
+		</div>
 	</div>
-	<footer th:replace="~{fragment/footer :: footer}"></footer>
+	<!-- <footer th:replace="~{fragment/footer :: footer}"></footer>  -->
 </body>
-
-<script th:src="@{/js/dataTable.js}"></script>
-<script th:src="@{/js/dataTable.bootstrap5.js}"></script>
-<script>
-	$("#richTable").DataTable();
-</script>
-
 </html>
