--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
@@ -1,58 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
-  <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{'/'}">
-    	<img th:src="@{/image/logo.webp}" alt="logo" width="50" height="50"/> Dashboard
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{'/users'}">Users</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Brands</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Customers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Shipping</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Sales Report</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Articles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Settings</a>
-        </li>
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li> -->
-      </ul>
-    </div>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"
+	th:fragment="navbar">
+	<div class="container-fluid">
+		<a class="navbar-brand" th:href="@{'/'}"> <img
+			th:src="@{/image/logo.webp}" alt="logo" width="50" height="50" />
+			Dashboard
+		</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+			data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				<li class="nav-item"><a class="nav-link active"
+					aria-current="page" th:href="@{'/users'}">Users</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Categories</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Brands</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Products</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Customers</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Shipping</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Orders</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Sales Report</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Articles</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Menu</a></li>
+				<li class="nav-item"><a class="nav-link" aria-current="page"
+					href="#">Settings</a></li>
+				<li class="nav-item">
+					<form th:action="@{/logout}" method="post">
+						<input type="hidden" th:name="${_csrf.parameterName}"
+							th:value="${_csrf.token}" />
+						<button type="submit" class="nav-link"
+							aria-current="page">Logout</button>
+					</form>
+				</li>
+			</ul>
+		</div>
+	</div>
 </nav>
