--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/loginPage.html
@@ -33,6 +33,11 @@
 					</div>
 					<br />
 					<div>
+						<input type="checkbox" name="remember-me" id="remember-me"/>
+						<label for="remember-me">Remember me</label>
+					</div>
+					<br/>
+					<div>
 						<button class="btn btn-primary" type="submit">Login</button>
 						<button class="btn btn-primary" type="reset">Clean</button>
 					</div>
