--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/changePassword.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/changePassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body>
