--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body>
 <nav th:replace="~{fragment/navbar :: navbar}"></nav>
-<h1>Hi This is admin dashboard</h1>
-<p class="lead" id="para">This is normal text</p>
-<button onclick="change()" class="btn btn-primary">Change</button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 mx-auto">
+            <h1>Hi <span sec:authentication="principal.username"></span></h1>
+            <p>Role: <span sec:authentication="principal.authorities"></span></p>
+        </div>
+    </div>
+</div>
 <footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
