--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
@@ -16,7 +16,7 @@
                 <li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')"><a class="nav-link active"
                                         aria-current="page" th:href="@{'/users'}">Users</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN')"><a class="nav-link" aria-current="page"
-                                        href="#">Categories</a></li>
+                                        th:href="@{'/categories'}">Categories</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN')"><a class="nav-link" aria-current="page"
                                         href="#">Brands</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN','ROLE_SALESPERSON','ROLE_SHIPPER')"><a class="nav-link" aria-current="page"
