--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/table.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/table.html
@@ -2,7 +2,7 @@
 <th:block th:fragment="table(jpaResult,tableUrl,table)">
 	<div class="my-3 d-flex justify-content-end">
 		<form class="w-25 d-flex" th:action="@{${tableUrl.searchUrl}}">
-			<input type="text" class="form-control" placeholder="Search User"
+			<input type="text" class="form-control" placeholder="Search"
 				name="text" />
 			<button class="btn btn-primary ms-2">Search</button>
 		</form>
@@ -11,7 +11,7 @@
 	<table th:replace="${table}"></table>
 	<div class="d-flex justify-content-between my-3">
 		<p>
-			Showing user <span th:text="${jpaResult.start}"></span> to <span
+			Showing <span th:text="${jpaResult.start}"></span> to <span
 				th:text="${jpaResult.end}"></span> of <span
 				th:text="${jpaResult.totalRecords}"></span>
 		</p>
