--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_category.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_category.html
@@ -53,7 +53,7 @@
                 </div>
                 <br/>
                 <div>
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
                     <button type="reset" class="btn btn-danger">Clean</button>
                 </div>
             </form>
