--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
 
 				<!-- Table Start -->
 				<div th:replace="~{fragment/table :: table(${userResult},${tableUrl},~{::#table})}">
-					<table class="table" id="table">
+					<table class="table table-striped table-hover" id="table">
 						<thead>
 							<tr>
 								<th scope="col">Photo</th>
@@ -56,7 +56,7 @@
 									alt="status" /></td>
 								<td>
 									<!-- Edit Button --> <a
-									th:href="@{/users/update/{id}(id=${user.id})}"
+									th:href="@{/users/update_page/{id}(id=${user.id})}"
 									class="btn btn-warning"> <img class="icon" alt="edit"
 										th:src="@{'/image/edit.svg'}" /> <!-- Change Password -->
 								</a> <a th:href="@{/users/changePassword/{id}(id=${user.id})}"
