--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/navbar.html
@@ -18,9 +18,9 @@
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN')"><a class="nav-link" aria-current="page"
                                         th:href="@{'/categories'}">Categories</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN')"><a class="nav-link" aria-current="page"
-                                        href="#">Brands</a></li>
+                                        th:href="@{'/brands'}">Brands</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_EDITOR','ROLE_ADMIN','ROLE_SALESPERSON','ROLE_SHIPPER')"><a class="nav-link" aria-current="page"
-                                        href="#">Products</a></li>
+                                        th:href="@{'/products'}">Products</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON')"><a class="nav-link" aria-current="page"
                                         href="#">Customers</a></li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_SALESPERSON')"><a class="nav-link" aria-current="page"
