--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands.html
@@ -26,7 +26,7 @@
 
             <!-- Table Start -->
             <div th:replace="~{fragment/table :: table(${brandResult},${tableUrl},~{::#table})}">
-                <table class="table table-striped table-hover" id="table">
+                <table class="table table-hover" id="table">
                     <thead>
                     <tr>
                         <th scope="col">Logo</th>
