--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
 
 				<!-- Table Start -->
 				<div th:replace="~{fragment/table :: table(${userResult},${tableUrl},~{::#table})}">
-					<table class="table table-striped table-hover" id="table">
+					<table class="table table-hover" id="table">
 						<thead>
 							<tr>
 								<th scope="col">Photo</th>
