--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
@@ -1,8 +1,11 @@
 <head th:fragment="head">
-<meta charset="UTF-8">
-<title>Shopme Admin</title>
-<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-<link rel="stylesheet" th:href="@{/css/style.css}"/>
-<script defer th:src="@{/js/bootstrap.bundle.min.js}"></script>
-<script defer th:src="@{/js/jquery-3.7.1.min.js}"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
+    <link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
+    <title>Shopme</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 </head>
