--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/unauthorizedNavbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/unauthorizedNavbar.html
@@ -9,7 +9,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" th:href="@{/loginPage}">Login</a>
+          <a class="nav-link active" aria-current="page" href="#">Careers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Payments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Shipping & Delivery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/loginPage}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Contact</a>
         </li>
       </ul>
     </div>
