--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products.html
@@ -51,8 +51,8 @@
                         <td>
                             <img alt="product"
                                  th:src="@{${product.image == null ?
-                                                              '/image/product/products.png' :
-                                                               '/image/product/'+product.image}}"
+                                                              '/images/product/products.png' :
+                                                               '/images/product/'+product.image}}"
                                  width="50" height="50"/>
                         </td>
                         <td th:text="${product.name}"></td>
