--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/footer.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/footer.html
@@ -1,18 +1,21 @@
 <footer class="bg-dark text-light footer" th:fragment="footer">
-
     <div class="container">
-        <div class="row p-3">
-            <div class="col-md-6 d-flex justify-content-center">
-                <p class="d-flex align-items-center m-0">HKSHOP &copy; all rights are preserved. Developed by Sadiul Hakim.</p>
+        <div class="row p-3 text-center text-md-start">
+            <!-- Left Section -->
+            <div class="col-12 col-md-6 mb-3 mb-md-0 d-flex justify-content-center justify-content-md-start">
+                <p class="d-flex align-items-center m-0">
+                    HKSHOP &copy; All rights reserved. Developed by Sadiul Hakim.
+                </p>
             </div>
-            <div class="col-md-6 d-flex justify-content-center">
-                <div class="d-flex align-items-center">
-                    <a class="mx-2 nav-link" aria-current="page" href="#">About Us</a>
-                    <a class="mx-2 nav-link" aria-current="page" href="#">Privacy Notice</a>
-                    <a class="mx-2 nav-link" aria-current="page" href="#">Returns & Refunds</a>
+
+            <!-- Right Section -->
+            <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end">
+                <div class="d-flex align-items-center flex-wrap">
+                    <a class="mx-2 nav-link text-light" href="#">About Us</a>
+                    <a class="mx-2 nav-link text-light" href="#">Privacy Notice</a>
+                    <a class="mx-2 nav-link text-light" href="#">Returns & Refunds</a>
                 </div>
             </div>
         </div>
     </div>
-
 </footer>
