--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
@@ -14,6 +14,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{'/categories'}">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{'/brands'}">Brands</a>
+                </li>
+                <li class="nav-item">
                     <form th:action="@{/logout}" method="post">
                         <input type="hidden" th:name="${_csrf.parameterName}"
                                th:value="${_csrf.token}"/>
