--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/view_product.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/view_product.html
@@ -10,14 +10,18 @@
         <div class="col-md-11 mx-auto mt-4 card card-body">
             <div class="row">
                 <div class="col-md-3 my-2">
-                    <img th:src="@{'/images/product/'+${product.image}}" alt="image image" class="img-fluid shadow-sm m-2" width="300"
+                    <img th:src="@{'/images/product/'+${product.image}}" alt="image image"
+                         class="img-fluid shadow-sm m-2" width="300"
                          height="280" id="main_image"/>
                     <div class="d-flex justify-content-between">
-                        <img th:src="@{'/images/product/'+${product.files[1]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[1]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40"/>
-                        <img th:src="@{'/images/product/'+${product.files[2]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[2]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40">
-                        <img th:src="@{'/images/product/'+${product.files[3]}}" alt="" class="img-fluid shadow-sm extra_image" width="80"
+                        <img th:src="@{'/images/product/'+${product.files[3]}}" alt=""
+                             class="img-fluid shadow-sm extra_image" width="80"
                              height="40"/>
                     </div>
                 </div>
@@ -51,6 +55,10 @@
                         <li class="m-0 list-group-item list-group-item-light">Weight : <span
                                 th:text="${product.weight}"></span></li>
                     </ul>
+                    <div class="mt-2">
+                        <a class="btn btn-primary ms-2">Add To Cart</a>
+                        <a class="btn btn-info ms-2" th:href="@{/}">Keep Shopping</a>
+                    </div>
                 </div>
             </div>
             <div class="row my-2 bg-light">
