--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
     <link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
-    <title>Shopme</title>
+    <title th:text="${SITE_NAME}"></title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
