--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/footer.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/footer.html
@@ -3,8 +3,8 @@
         <div class="row p-3 text-center text-md-start">
             <!-- Left Section -->
             <div class="col-12 col-md-6 mb-3 mb-md-0 d-flex justify-content-center justify-content-md-start">
-                <p class="d-flex align-items-center m-0">
-                    HKSHOP &copy; All rights reserved. Developed by Sadiul Hakim.
+                <p class="d-flex align-items-center m-0" th:text="${COPYRIGHT}">
+
                 </p>
             </div>
 
