--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product_by_entity.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/product_by_entity.html
@@ -36,11 +36,22 @@
                 class="d-flex justify-content-center align-items-center p-2 flex-wrap col-12 col-md-3 rounded-2 card"
                 th:each="product:${result.data}"
         >
-            <img th:src="@{'/images/product/'+${product.image}}" alt="product" class="img-fluid" width="100" height="130"/>
+            <img th:src="@{'/images/product/'+${product.image}}" alt="product" class="img-fluid" width="100"
+                 height="130"/>
             <h5 class="my-1" th:text="${product.name}"></h5>
-            <p class="m-0">TK. <span th:text="${product.price}"
-                                     style="text-decoration:  line-through;"></span> <span
-                    th:text="${product.discountPrice}"></span></p>
+
+            <p class="m-0" th:if="${CURRENCY_POSITION == 'before'}">
+                <span th:text="${CURRENCY_SYMBOL}"></span>
+                <span th:text="${numberFormater.format(product.price)}" style="text-decoration:  line-through;"></span>
+                <span th:text="${numberFormater.format(product.discountPrice)}"></span>
+            </p>
+
+            <p class="m-0" th:if="${CURRENCY_POSITION == 'after'}">
+                <span th:text="${numberFormater.format(product.price)}" style="text-decoration:  line-through;"></span>
+                <span th:text="${numberFormater.format(product.discountPrice)}"></span>
+                <span th:text="${CURRENCY_SYMBOL}"></span>
+            </p>
+
             <p class="m-0">
                             <span
                                     th:text="${product.quantity > 0 ? 'Available' : 'Out of Stock'}"
@@ -50,7 +61,9 @@
                 <span th:text="${'('+product.quantity+' items)'}"></span>
             </p>
             <div class="mt-2">
-                <a href="#" class="btn btn-primary">Add To Card</a>
+                <a class="btn btn-primary ms-2" th:disabled="${product.quantity == 0}">
+                    [[${product.quantity == 0 ? 'Request To Restock' : 'Add To Cart'}]]
+                </a>
                 <a th:href="@{|/products/view_page/${product.id}|}" class="btn btn-info">See More</a>
             </div>
         </div>
