--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -42,6 +42,7 @@
 						<button class="btn btn-primary" type="reset">Clean</button>
 					</div>
 				</form>
+				<p>Do not have an account? <a class="" th:href="@{/customer/registerPage}">Register Here</a>.</p>
 			</div>
 		</div>
 	</div>
