--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10 mx-auto">
-            <h1>Hi <span sec:authentication="principal.username"></span></h1>
-            <p>Role: <span sec:authentication="principal.authorities"></span></p>
+            <!-- <h1>Hi <span sec:authentication="principal.username"></span></h1>
+            <p>Role: <span sec:authentication="principal.authorities"></span></p> -->
         </div>
     </div>
 </div>
